--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Codinfox Lanyon
 tagline: 'A Jekyll theme based on Lanyon'
 description: 'A Jekyll theme adapted from <a href="http://lanyon.getpoole.com/" target="_blank">Lanyon</a>. Made by <a href="http://codinfox.github.io" target="_blank">@codinfox</a>.'
 baseurl: ''
-url: https://wkimdev.github.io/
+url: https://choiwono.github.io/
 logo: '/public/logo.png'
 
 # Site configurations
@@ -28,12 +28,8 @@ author:
   description: A passionate <strong>developer and researcher</strong>, learning to be a giant.
   gravatar: 3c2986ad7ac1f2230ea3596f44563328 # md5 hash of your email address
   contact:
-    # linkedin:  https://www.linkedin.com/in/lizhihao
-    github:    https://github.com/wkimdev
-    # facebook:  <hide>
-    # twitter:   https://twitter.com/Li_Zhihao
-    # weibo:     http://weibo.com/41173780
-    email:     http://www.google.com/recaptcha/mailhide/d?k=01I3lZFiZYng9N3QxYEtsDaQ==&c=31wAnZkuKqcG0ATAqJN8Z3ln5kkYLA9TwkGc-IbygpM=
+    github:    https://github.com/choiwono
+    email:     treasureb1220@gmail.com
 
 # Navigation (2nd level links supported)
 nav:
@@ -57,7 +53,7 @@ hero:
   caption: Original Artwork &copy; <a href="http://yalestewart.deviantart.com/art/We-Will-Be-Giants-370176475">Yale Stewart</a>
 
 # Puglins
-mathjax: true # whether support mathjax
-google_analytics_token: 'UA-00000000-1' # leave blank if you don't want google analytics
-disqus_short_name: 'wkimdev-gitblog' # leave blank if you don't want disqus
+#mathjax: true # whether support mathjax
+#google_analytics_token: 'UA-00000000-1' # leave blank if you don't want google analytics
+#disqus_short_name: 'choidev-gitblog' # leave blank if you don't want disqus
 
