--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   gravatar: 3c2986ad7ac1f2230ea3596f44563328 # md5 hash of your email address
   contact:
     github:    https://github.com/choiwono
-    email:     treasureb1220@gmail.com
+    #email:     treasureb1220@gmail.com
 
 # Navigation (2nd level links supported)
 nav:
