--- a/_config.yml
+++ b/_config.yml
@@ -55,5 +55,5 @@ hero:
 # Puglins
 #mathjax: true # whether support mathjax
 #google_analytics_token: 'UA-00000000-1' # leave blank if you don't want google analytics
-#disqus_short_name: 'choidev-gitblog' # leave blank if you don't want disqus
+disqus_short_name: 'choiwono' # leave blank if you don't want disqus
 
