--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site Info
-title: Codinfox Lanyon
-tagline: 'A Jekyll theme based on Lanyon'
-description: 'A Jekyll theme adapted from <a href="http://lanyon.getpoole.com/" target="_blank">Lanyon</a>. Made by <a href="http://codinfox.github.io" target="_blank">@codinfox</a>.'
+title: TTYL..
+tagline: ''
+description: ''
 baseurl: ''
 url: https://choiwono.github.io/
-logo: '/public/logo.png'
+logo: ''
 
 # Site configurations
 plugins:
